fixed visibility for tbl-large vs tbl-mobile to media query for max-width: 767px

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -551,6 +551,14 @@ body {
     width: 90%;
     /* margin: auto; */
   }
+
+  .tbl-large {
+    visibility: hidden;
+  }
+
+  .tbl-mobile {
+    visibility: visible;
+  }
   
 }
 
